fixed align for breadcrumbs

--- a/theme/bootstrap-override/bootstrap-italia/_breadcrumb.scss
+++ b/theme/bootstrap-override/bootstrap-italia/_breadcrumb.scss
@@ -1,9 +1,15 @@
 .breadcrumb-container {
   .breadcrumb {
-    .breadcrumb-item {
+    li.breadcrumb-item {
+      display: flex;
+      align-items: center;
+
       span.separator {
         display: inline;
         border: none;
+        top: 0;
+        margin-top: 0;
+        margin-bottom: 0;
       }
     }
   }
